se realizan los test #18